# animation_effnet

./: pyproject.toml
data/: README.md
lightning_logs/effnet/version_0/: events.out.tfevents.1721403397.ip-10-192-12-53.18963.0
src/: main.py
src/model/: eff_net.py
src/modeling/: animations_data_module.py  train.py
